# pydantic-client

./: README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  python-publish.yml  workflow.yml
example/: config.tmol  example.py  example_aiohttp.py  example_httpx.py  example_mock.py  example_nested_path.py  example_requests.py  example_tools.py  example_usage.py  protocol.py  use_config_to_init.py  use_factory.py  use_toml_to_init.py
pydantic_client/: __init__.py  async_client.py  base.py  cli.py  container.py  decorators.py  decorators_new.py  decorators_old.py  errors.py  factory.py  group.py  main.py  models.template  proxy.py  schema.py  stream_client.py  sync_client.py  utility.py
pydantic_client/clients/: __init__.py  abstract_client.py  aiohttp.py  aiohttp_client.py  base.py  encoders.py  httpx.py  requests.py  requests_client.py  stream_client.py
pydantic_client/schema/: ClientConfig.py  argument.py  client_config.py  file.py  http_request.py  method_info.py
pydantic_client/tools/: agno.py
tests/: book.py  client.py  config.toml  conftest.py  fastapi_service.py  helpers.py  mock_data.json  test-swagger.yaml  test_agno_tools.py  test_async_client.py  test_async_new_features.py  test_base_client.py  test_base_client_cov.py  test_cast_response.py  test_cli.py  test_client.py  test_decorators.py  test_factory.py  test_group.py  test_httpx.py  test_load_toml.py  test_mock_client.py  test_mock_client_debug.py  test_mock_file.py  test_nested_path.py  test_new_features.py  test_parse_swagger  test_querystring.py  test_span_statsd.py  test_sync_client.py  test_union_response_type.py  test_union_types.py  test_unknown_args_behavior.py
