[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-client"
version = "2.0.0"
description = "A pydantic based rest client generator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "ponytailer", email = "huangxiaohen2738@gmail.com" }
]
keywords = ["pydantic", "client", "rest", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24.1",
    "anyio>=3.7.0",
    "aiohttp>=3.10.11",
    "requests>=2.32.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "respx>=0.20.2",
]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.284",
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
