[project]
name = "pydantic-client"
version = "1.0.7"
description = "Http client base pydantic, with requests or aiohttp"
authors = [
    {name = "ponytailer", email = "huangxiaohen2738@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
homepage = "https://github.com/ponytailer/pydantic-client"
dependencies = [
    "pydantic>=2.1",
    "requests",
    "openapi-spec-validator>=0.7.1",
    "jinja2>=3.1.5",
    "typer>=0.15.1",
]

[project.optional-dependencies]
httpx = ["httpx[http2]"]
aiohttp = ["aiohttp"]
all = ["httpx[http2]", "aiohttp"]

[project.scripts]
pydantic-client = "pydantic_client.cli:cli_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pydantic_client --cov-report=term-missing"

[tool.coverage.run]
source = ["pydantic_client"]
omit = ["tests/*"]