[project]
name = "pydantic-client"
version = "2.0.3"
description = "Http client base pydantic, with requests or aiohttp"
authors = [
    {name = "ponytailer", email = "huangxiaohen2738@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
homepage = "https://github.com/ponytailer/pydantic-client"
dependencies = [
    "pydantic>=2.1",
    "requests",
    "statsd>=4.0.1",
]

[project.optional-dependencies]
httpx = ["httpx[http2]"]
aiohttp = ["aiohttp"]
all = ["httpx[http2]", "aiohttp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pydantic_client --cov-report=term-missing"

[tool.coverage.run]
source = ["pydantic_client"]
omit = ["tests/*"]

[project.scripts]
swagger-cli = "pydantic_client.swagger_cli:main"
